[tool.poetry]
name = "twitter"
version = "0.1.1"
description = ""
authors = ["Ahmed Al-Dulimi <ahmed.aldulimi@student.unimelb.edu.au>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
