[tool.poetry]
name = "twitter"
version = "0.1.3"
description = "Reverse engineered Twitter public API as a library and CLI tool"
authors = ["Ahmed Al-Dulimi <ahmed.aldulimi@student.unimelb.edu.au>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aaldulimi/twitter"
repository = "https://github.com/aaldulimi/twitter"
keywords = ["twitter", "api", "cli"]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
click = "^8.1.2"
rich = "^12.1.0"

[tool.poetry.scripts]
twitter = "cli.cli:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

